--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "scheduler",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "engines": {
+    "node": "10.x"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
