--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "10.x"
   },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/server.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
